# sling

./: Cargo.toml  README.md  install.sh
.github/workflows/: analyze.yml  check-and-lint.yml  release.yml  test.yml  upload-binaries.yml
changelog/: v0.1.0.md  v0.1.1.md  v0.1.2.md
src/: active_config.rs  aws.rs  config.rs  gcp.rs  index.rs  install.rs  main.rs  package.rs  package_version.rs  pip.rs  publish.rs  runtime_config.rs  s3.rs  semantic_version.rs  yaml.rs
src/package/: error.rs  mod.rs  package.rs  patterns.rs
src/storage/: driver.rs  gs.rs  mod.rs  object_ref.rs  s3.rs
