[package]
name = "sling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "*"
aws-sdk-s3 = "*"
bytes = "1"
clap = { version = "3.1.3", features = ["derive"] }
dirs = "4.0"
futures = "0.3"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }