[package]
name = "sling"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.8"
aws-sdk-s3 = "0.8"
bytes = "1"
clap = { version = "3.1.3", features = ["derive"] }
dirs = "4.0"
futures = "0.3"
google-storage1 = "2"
hyper = "0.14"
hyper-rustls = "0.22"
mime = "0.3"
regex = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
simple-error = "0.1"
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
urlencoding = "2.1"
yup-oauth2 = "5.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                            # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
